Fixed test failure in ArchiveHeapTestClass.java