@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2022, 2023, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2022, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -104,7 +104,9 @@ public class ArchiveHeapTestClass {
         OutputAnalyzer output;
 
         testCase("sun.invoke.util.Wrapper");
-        output = dumpBootAndHello(CDSTestClassG_name);
+        output = dumpBootAndHello(CDSTestClassG_name,
+                                  "--add-exports", "java.base/sun.invoke.util=ALL-UNNAMED",
+                                  "--add-exports", "java.base/jdk.internal.misc=ALL-UNNAMED");
         mustSucceed(output);
 
         TestCommon.run("-Xbootclasspath/a:" + bootJar, "-cp", appJar, "-Xlog:cds+heap",
